--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/logo_white_large.png
     - assets/images/lp_image.png
     - assets/images/smartcity.png
 
